# die4u

./: .gitignore  Cargo.toml  README.md  book.toml  build.rs
.cargo/: config.toml
.github/workflows/: rust.yml
die4u-game/: Cargo.toml
die4u-game/assets/: levels.assets.ron  player.assets.ron
die4u-game/assets/levels/: world.ldtk
die4u-game/src/: main.rs
die4u-lib/: Cargo.toml
die4u-lib/src/: lib.rs
die4u-lib/src/core/: game_state.rs  mod.rs
die4u-lib/src/core/animation/: components.rs  mod.rs  resources.rs  systems.rs
die4u-lib/src/core/assets/: mod.rs
die4u-lib/src/core/audio/: mod.rs
die4u-lib/src/core/debug/: mod.rs
die4u-lib/src/core/input/: input_map.rs  mod.rs
die4u-lib/src/core/input/gameplay/: mod.rs  player_actions.rs
die4u-lib/src/core/physics/: mod.rs
die4u-lib/src/core/setup/: camera_setup.rs  mod.rs  window_setup.rs
die4u-lib/src/levels/: ldtk_level.rs  mod.rs
die4u-lib/src/levels/ldtk/: mod.rs  setup.rs
die4u-lib/src/levels/ldtk/wall/: mod.rs
die4u-lib/src/levels/procedural_levels/: assets.rs  mod.rs  systems.rs
die4u-lib/src/mobs/: mob.rs  mod.rs
die4u-lib/src/mobs/components/: experience.rs  health.rs  inventory.rs  mod.rs  name.rs  shield.rs
die4u-lib/src/mobs/player/: assets.rs  bundle.rs  components.rs  mod.rs  resources.rs  systems.rs
die4u-lib/src/mobs/player/input/: input_map.rs  manager.rs  mod.rs  player_actions.rs
die4u-lib/src/mobs/player/movement/: mod.rs
src/: lib.rs  main.rs
src/core/: mod.rs
src/core/animation/: mod.rs  resources.rs
src/core/assets/: mod.rs  progress.rs
src/core/debug/: mod.rs
src/core/input/: gamepad.rs  keyboard.rs  mod.rs  mouse.rs
src/core/physics/: mod.rs
src/core/setup/: camera_setup.rs  mod.rs  window_setup.rs
src/entities/: mob.rs  mod.rs  player.rs  player_mob.rs
src/entities/components/: experience.rs  shield.rs
src/levels/: mod.rs
src/mobs/: mob.rs
src/mobs/components/: health.rs  inventory.rs  mod.rs  name.rs
src/mobs/player/: bundle.rs  components.rs  mod.rs  systems.rs
src/resources/: animation_timer.rs  game_settings.rs  mod.rs
tools/ci/: Cargo.toml
