[package]
name = "die4u-rs"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy-inspector-egui = "0.18.0"
bevy_asset_loader = "0.14.1"

[dependencies.bevy]
version = "0.10.0"
features = ["dynamic_linking"]
