[package]
name = "die4u-lib"
version = "0.1.0"
authors = ["Michał Pędzik"]
edition = "2021"

[dependencies]
bevy-inspector-egui = "0.18.0"
bevy_ecs_ldtk = "0.6.0"
bevy_egui = "0.20.1"
iyes_progress = "0.8.0"
lazy_static = "1.4.0"
savefile = "0.12.0"
leafwing-input-manager = "0.9.1"

[dependencies.bevy]
version = "0.10.0"
features = ["dynamic_linking"]

[dependencies.bevy_asset_loader]
version = "0.16.0"
features = ["progress_tracking", "2d", "standard_dynamic_assets"]

[dependencies.bevy_rapier2d]
version = "0.21.0"
features = ["debug-render-2d"]

[dependencies.bevy_kira_audio]
version = "0.15.0"
features = ["mp3"]
